name:                web-seed
version:             0.1.0.0
synopsis:            A Warp seed project
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

executable web-seed
  main-is:             main.hs
  -- other-modules:       
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
  cpp-options:         -DUSE_REDIS
  build-depends:       base >=4.7 && <4.8
                     , aeson ==0.*
                     , aws ==0.*
                     , blaze-builder ==0.*
                     , bytestring ==0.*
                     , conduit ==1.*
                     , conduit-extra ==1.*
                     , directory ==1.*
                     , fast-logger ==2.*
                     , filepath ==1.*
                     , hedis ==0.*
                     , http-conduit ==2.*
                     , http-types ==0.*
                     , split ==0.*
                     , streaming-commons ==0.*
                     , text ==1.*
                     , unix ==2.*
                     , wai ==2.*
                     , wai-app-static ==2.*
                     , wai-extra ==2.*
                     , warp ==2.*
                     , zlib ==0.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
