name:                web-seed
version:             0.1.0.0
synopsis:            A Warp seed project
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.18

executable web-seed
  default-language:    Haskell2010
  main-is:             main.hs
  -- other-modules:       
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
  cpp-options:         -DUSE_REDIS
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aws
                     , blaze-builder
                     , bytestring
                     , conduit
                     , conduit-extra
                     , directory
                     , fast-logger
                     , filepath
                     , hedis
                     , http-conduit
                     , http-types
                     , text
                     , unix
                     , wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , zlib
  -- hs-source-dirs:      
